--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,7 @@ jobs:
     env:
       FC: gfortran-${{ matrix.gcc_v }}
       GCC_V: ${{ matrix.gcc_v }}
+      PYTHONPATH: $PWD
 
     steps:
     - name: Checkout code
@@ -47,8 +48,8 @@ jobs:
 
     - name: Compile
       run: |
-        FoBiS.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode shared-gnu
-        FoBis.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode tests-gnu
+      	FoBiS.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode shared-gnu
+      	FoBis.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode tests-gnu
 
     - name: Test with pytest
       run: py.test -vs tests
