install the package in development mode on gh actions and fix flake8 in test_correctness.py

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -51,4 +51,6 @@ jobs:
         FoBiS.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode tests-gnu
 
     - name: Test with pytest
-      run: py.test -vs tests
+      run: |
+      	pip install -e .
+      	py.test -vs tests
