--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, test_version]
   pull_request:
-    branches: [ main ]
+    branches: [ main, test_version]
 
 jobs:
 
