--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install Python dependencies
       if: contains( matrix.os, 'ubuntu')
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools
         pip install FoBiS.py numpy matplotlib pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
