--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,6 +50,9 @@ jobs:
         FoBiS.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode shared-gnu
         FoBiS.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode tests-gnu
 
+    - name: execute py script # run the version.py to get the package version
+      run: python version.py
+      
     - name: Test with pytest
       run: |
         pip install -e .
