one more test in CI.yml

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,6 +49,9 @@ jobs:
       run: |
         FoBiS.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode shared-gnu
         FoBiS.py build -f seiscope_opt_toolbox_w_ctypes.fobis -mode tests-gnu
+        
+    - name: execute py script # run the version.py to get the package version
+      run: python test_subprocess.py
 
     - name: Test with pytest
       run: |
