--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,15 @@
 max-line-length = 90
 ignore = F403,E226,E731,W503,F405,E722,E741,W504,W605
 exclude = .github
+
+# See the docstring in versioneer.py for instructions. Note that you must
+# re-run 'versioneer.py setup' after changing this section, and commit the
+# resulting files.
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = sotb_wrapper/_version.py
+versionfile_build = sotb_wrapper/_version.py
+tag_prefix =
+
