--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -2,7 +2,7 @@ name: Flake8
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, cmake_built ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
