--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ docstring-convention = google
 strictness = short
 per-file-ignores =
 	sotb_wrapper/examples/*:ANN
-    tests/*:S101,ANN
+    test/*:S101,ANN
     noxfile.py:ANN
     setup.py:D100,BLK100
 extend-exclude = .nox
