--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,7 +2,7 @@ name: Python test
 
 on:
   push:
-    branches: [main, cmake_built]
+    branches: [main]
   pull_request:
     branches: [main]
   workflow_dispatch:
