add report file

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -40,3 +40,6 @@ jobs:
           FC: ${{ matrix.fc }}
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
+        with:
+    	  files: ./cov.xml
+
