add coverage.paths to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ build-backend = "setuptools.build_meta"
 branch = true
 #omit = ["*/site-packages/*"]
 
+[tool.coverage.paths]
+source =
+	sotb_wrapper
+	**/site-packages/sotb_wrapper
+
 [tool.coverage.report]
 show_missing = true
 
