--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -38,6 +38,35 @@ jobs:
           CC: ${{ matrix.cc }}
           CXX: ${{ matrix.cxx }}
           FC: ${{ matrix.fc }}
+      - name: Upload coverage data
+        uses: "actions/upload-artifact@v3"
+        with:
+          name: coverage-data
+          path: ".coverage.*"
+      
+  coverage:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Python ${{ matrix.python_version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.10
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade nox
+      - name: Download coverage data
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage-data
+      - name: Combine coverage data and display human readable report
+        run: |
+          python -m nox --force-color -s cover
+      - name: Create coverage report
+        run: |
+          python -m nox --force-color -s cover -- xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
 
