--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -46,7 +46,7 @@ jobs:
       
   coverage:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: test
     steps:
       - uses: actions/checkout@v3
       - name: Install Python ${{ matrix.python_version }}
