--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.coverage.run]
 branch = true
-#omit = ["*/site-packages/*"]
+omit = ["*/site-packages/sotb_wrapper/_version.py"]
 
 [tool.coverage.paths]
 source = ["sotb_wrapper", "*/site-packages/sotb_wrapper"]
