--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -69,4 +69,6 @@ jobs:
           python -m nox --force-color -s cover -- xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
 
