--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "scikit-build", "cmake", "fypp", "ninja; platform_system!='Windows'"]
+requires = ["setuptools", "wheel", "scikit-build", "cmake", "fypp", "versioneer", "ninja; platform_system!='Windows'"]
 build-backend = "setuptools.build_meta"
 
 [tool.coverage.run]
