--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "scikit-build", "cmake", "fypp", "versioneer", "ninja; platform_system!='Windows'"]
+requires = ["setuptools==65.0.0", "wheel==0.37.0", "scikit-build==0.15.0", "cmake", "fypp==3.1", "versioneer==0.21", "ninja; platform_system!='Windows'"]
 build-backend = "setuptools.build_meta"
 
 [tool.coverage.run]
