--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -33,6 +33,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: |
+          git fetch --prune --unshallow --tags
+          echo exit code $?
+          git tag --list
 
       - name: Build sdist
         run: pipx run build --sdist
