--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -16,6 +16,10 @@ jobs:
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
+      - run: |
+          git fetch --prune --depth=1 --tags
+          echo exit code $?
+          git tag --list
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.3.1
@@ -34,7 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          git fetch --prune --unshallow --tags
+          git fetch --prune --depth=1 --tags
           echo exit code $?
           git tag --list
 
