--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -14,14 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v3
+    - uses: wntrblm/nox@2023.04.23
       with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade nox
+        python-versions: "3.9"
     - name: Lint with flake8
       run: |
         python -m nox -s lint --verbose
