Update flake8.yml to run nox

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -19,4 +19,4 @@ jobs:
         python-versions: "3.9"
     - name: Lint with flake8
       run: |
-        python -m nox -s lint --verbose
+        nox -s lint --verbose
